src/objects/Superhero__c.object
<CustomObject>
    <description>When everyone is special... no one is...</description>
    <fields>
        <fullName>Alias__c</fullName>
        <description>Alternative name for the superhero.</description>
        <inlineHelpText>Alternative name for the superhero.</inlineHelpText>
        <label>Alias</label>
        <length>225</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_City__c</fullName>
        <description>Home base for this superhero.</description>
        <inlineHelpText>Home base for this superhero.</inlineHelpText>
        <label>Home City</label>
        <length>225</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Injured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean flag indicating whether or not a hero is injured.</description>
        <inlineHelpText>Boolean flag indicating whether or not a hero is injured.</inlineHelpText>
        <label>Is Injured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Power__c</fullName>
        <description>Type of power that the superhero has control over.</description>
        <inlineHelpText>Type of power that the superhero has control over.</inlineHelpText>
        <label>Power</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Flight</fullName>
                </value>
                <value>
                    <fullName>Magic</fullName>
                </value>
                <value>
                    <fullName>Strength</fullName>
                </value>
                <value>
                    <fullName>Tech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profile_Image_URL__c</fullName>
        <description>URL for the photo of the superhero.</description>
        <inlineHelpText>URL for the photo of the superhero.</inlineHelpText>
        <label>Profile Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Indicates the availability and status of the superhero.</description>
        <inlineHelpText>Indicates the availability and status of the superhero.</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>On Mission</fullName>
                </value>
                <value>
                    <fullName>Injured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Superhero</label>
    <nameField>
        <label>Superhero Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Superheroes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>